--- a/action.yml
+++ b/action.yml
@@ -21,6 +21,10 @@ inputs:
     description: 'Build files in parallel'
     required: false
     default: 'false'
+  skip_release:
+    description: 'Skip release creation (useful for testing)'
+    required: false
+    default: 'false'
 
 outputs:
   pdf_files:
